# TTS-WebUI

./: .gitattributes  .gitignore  Dockerfile  MCP_SERVER_README.md  README.md  docker-compose.yml  extensions.json  installation.html  proxy.py  pyproject.toml  pytest.ini  requirements.txt  server.py  setup.py  start_tts_webui.bat
.github/workflows/: create-release.yaml  test-installer.yaml  test-pip-install.yaml  test-react-ui.yaml  tests.yaml  update-full-repo-zip.yaml
documentation/: CALL_TREE.md  changelog-2025.md  external_extensions.md  manual_installation.md  mcp-integration-diagram.txt  mcp-server-implementation.md  mcp-server-quickstart.md  mcp-server.md  testing.md
documentation/notebooks/: google_colab.ipynb
examples/: README.md  test_mcp_server.py
installer_scripts/: .gitignore  init_app.js  init_mamba.bat  init_mamba.sh  root.ps1  start_unified.bat  start_unified.sh  tsconfig.json  versions.json
installer_scripts/js/: applyDatabaseConfig.js  displayMessage.js  index.html  initializeApp.js  openBrowser.js  processManager.js  server.js  shell.js  unifiedProxy.js
installer_scripts/terraform/: main.tf
installer_scripts/tests/: setup_react_ui.js  unifiedProxy.test.js
installer_scripts/tools/: diagnostic.bat  diagnostic.sh  diagnostic_inner.sh  extension_manager.py  open_terminal.bat  open_terminal.sh  run_extension_manager.bat  run_extension_manager.command
nodes-ui/: README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
nodes-ui/public/: custom-nodes.js
nodes-ui/src/: setupTests.ts
notebooks/: google_colab.ipynb
react-ui/: generate-plugin-imports.js  next.config.js  package-lock.json  package.json  tsconfig.json
react-ui/.stories_archive/: Button.stories.ts
tests/: __init__.py  conftest.py  test_cli_integration.py  test_config.py  test_decorators.py  test_dotenv_manager.py  test_extensions_data_loader.py  test_mcp_server.py  test_minimax_cloud_tts.py  test_server_integration.py  test_utils.py
tools/: conda_env_bash.sh  extension_manager.py  mcp.bat
tts-webui-node-mcp/: README.md  package.json
tts-webui-node-mcp/src/: index.ts
tts_webui/: cli.py  settings_tab_gradio.py
tts_webui/config/: config_utils.py  load_config.py  save_config_bark.py  save_config_gradio.py
tts_webui/css/: tts_webui.css
tts_webui/database/: __init__.py  api_server.py  connection.py  decorators.py  models.py  rescan.py  schema.py
tts_webui/decorators/: __init__.py  decorator_add_base_filename.py  decorator_apply_torch_seed.py  decorator_interrupt.py  decorator_log_generation.py  decorator_save_metadata.py  decorator_save_musicgen_npz.py  decorator_save_wav.py  gradio_dict_decorator.py  log_function_time.py
tts_webui/dotenv_manager/: init.py  writer.py
tts_webui/extensions_loader/: LoadingIndicator.py  __init__.py  decorator_extensions.py  extensions_data_loader.py  interface_extensions.py  proxy_harness.py  setup_proxy_extension.py
tts_webui/gradio/: all_tabs.py  blocks.py  css.py  fix_gradio_tabs.py  get_theme.py  main_ui.py  print_gradio_options.py  tts_webui.css
tts_webui/gradio_proxy_tree/: __init__.py  handlers.py  main.py  proxy_tree.py
tts_webui/history_tab/: collections_directories_atom.py  get_wav_files.py  main.py  save_to_favorites.py
tts_webui/mcp_server/: __init__.py  mcp_config_example.json  server.py
tts_webui/tutorials/: tab.py
tts_webui/utils/: OpenFolderButton.py  list_dir_models.py  (+18 more)
(+103 files in other folders)
