[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TTS-WebUI"
version = "0.4.0"
description = "TTS WebUI"
readme = "README.md"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts-webui"

[project.scripts]
tts-webui = "tts_webui.cli:main"

[project.optional-dependencies]
cpu = [
    "torch==2.7.0",
    "torchvision",
    "torchaudio",
]
cuda = [
    "torch==2.7.0+cu128",
    "torchvision",
    "torchaudio",
    "xformers",
]
mac = [
    "torch==2.7.0",
    "torchvision",
    "torchaudio",
]
rocm = [
    "torch==2.7.0",
    "torchvision",
    "torchaudio",
]
intel = [
    "torch==2.7.0",
    "torchvision",
    "torchaudio",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1"
]

[tool.setuptools]
packages = ["tts_webui"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "-p", "no:warnings"]
markers = [
    "unit: Unit tests for individual functions and classes",
    "integration: Integration tests for module interactions",
    "slow: Tests that take more than a few seconds to run",
    "requires_gpu: Tests that require GPU to run",
    "requires_network: Tests that require network access"
]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__", "notebooks", "workspace", "outputs"]

# [tool.setuptools.package-data]
# "*" = ["*.json"]

# Alternative configuration if you want to use find_namespace_packages
# [tool.setuptools.packages.find]
# namespaces = true
# include = ["tts_webui.*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
